# Capable-Project

./: Project_info.md  README.md  package-lock.json  test_notes.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  RAG_README.md  README.md  app.db  docker-compose.yml  pyproject.toml  test_api.py  test_flashcard.txt  test_papers_local.py  test_rag.py
backend/app/: ai.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: dependencies.py  models.py  ownership.py  router.py  schemas.py  utils.py
backend/app/routers/: __init__.py  analytics.py  diagram.py  educational_sources.py  flashcards.py  lessons.py  papers.py  query.py  quiz.py  rag.py
backend/app/services/: adaptive_difficulty.py  diagram_analysis.py  extractor.py  flashcards.py  khan_source.py  lesson_summary.py  llm.py  papers.py  pdf_export.py  quiz_generator.py  quizlet_import.py  rag.py  rag_state.py  youtube_source.py
backend/media/rag_stores/user_9/: index.faiss  index.pkl
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AuthLayout.tsx  DashboardLayout.tsx  FormattedMarkdown.tsx  InputField.tsx  ProtectedRoute.tsx  SelectField.tsx  VoiceInputButton.tsx
frontend/src/hooks/: useSpeechRecognition.ts
frontend/src/lib/: api-client.ts  auth.ts
frontend/src/pages/: AnalyticsDashboardPage.tsx  FlashcardDashboard.tsx  FlashcardGeneratePage.tsx  FlashcardStudyPage.tsx  ForgotPasswordPage.tsx  LessonsPage.tsx  LoginPage.tsx  PaperDashboard.tsx  PaperGeneratePage.tsx  (+7 more)
(+26 files in other folders)
