[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "sqlalchemy>=2.0.48",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
]
