[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "sqlalchemy>=2.0.48",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "bs4>=0.0.2",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=0.1.0",
    "faiss-cpu>=1.13.2",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "sentence-transformers>=3.0.0",
    "pdfplumber>=0.11.4",
]
